--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -41,6 +41,7 @@ jobs:
             --url "https://www.apimatic.io/api/api-entities/$APIMATIC_API_ID" \
             --header "Authorization:X-Auth-Key $APIMATIC_API_KEY" \
             --header "Accept:application/json" \
+            -F "file=@spec/openapi-spec.json" \
             -o entity.json
             
 
