--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -50,15 +50,15 @@ jobs:
       - name: Trigger SDK generation
         run: |
           curl -X POST \
-            --url "https://www.apimatic.io/api/api-entities/$APIMATIC_API_ID/code-generations" \
+            --url "https://www.apimatic.io/api/api-entities/$APIMATIC_API_ID" \
             -H "Authorization: X-Auth-Key $APIMATIC_API_KEY" \
             -H "accept: application/json, text/plain, */*" \
             -H "content-type: application/json;charset=UTF-8" \
             --data-raw '{
               "template": "CS_NET_STANDARD_LIB",
-              "repoName": "'"$GITHUB_REPO"'",
-              "branchName": "CodeGen-CS",
+              "repoName": "new-cs-authlete-sdk",
+              "branchName": "main",
               "commitMessage": "API spec updated from GitHub",
-              "accountName": "'"$GITHUB_ACCOUNT"'"
+              "accountName": "rehanalam"
             }' \
             --compressed
