--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      APIMATIC_API_KEY: ${{ secrets.APIMATIC_API_KEY }}
-      APIMATIC_API_ID: ${{ secrets.APIMATIC_API_ID }}
+      APIMATIC_API_KEY: ${{ secrets.API_KEY }}
+      APIMATIC_API_ID: ${{ secrets.API_ID }}
       GITHUB_REPO: your-github-repo-name
       GITHUB_ACCOUNT: your-github-account-name
 
