--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -64,29 +64,29 @@ jobs:
 
           cat sdk-gen-response.json
           echo "CODEGEN_ID=$(jq -r '.codeGenerationId' sdk-gen-response.json)" >> $GITHUB_ENV
-
+      
       - name: Wait for SDK generation to complete
         run: |
           echo "Waiting 10 seconds for SDK to be ready..."
           sleep 10
-
-      - name: Download SDK zip
+      
+      - name: Download generated SDK
         run: |
           curl -X GET \
-            --url "https://api.apimatic.io/code-generations/$CODEGEN_ID/download" \
             -H "Authorization: X-Auth-Key $APIMATIC_API_KEY" \
-            -o sdk.zip
+            --output sdk.zip \
+            "https://api.apimatic.io/api-entities/$APIMATIC_API_ID/code-generations/688901f8a41170377a2f5461/generated-sdk"
 
       - name: Unzip SDK
         run: unzip sdk.zip -d sdk
 
       - name: Clone target repo
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@users.noreply.github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git clone https://x-access-token:$GH_PUSH_TOKEN@github.com/$TARGET_REPO.git target-repo
 
-      - name: Copy SDK into target repo
+      - name: Copy SDK to repo
         run: |
           rm -rf target-repo/*
           cp -r sdk/* target-repo/
@@ -95,8 +95,9 @@ jobs:
         run: |
           cd target-repo
           git add .
-          git commit -m "chore: auto-update SDK from APIMatic"
+          git commit -m "chore: auto-update SDK $(date +%Y-%m-%d)"
           git push origin main
+
 
 
      
